# rust-bootcamp

./: .gitignore  Cargo.toml  README.md  _typos.toml  cliff.toml  deny.toml  test.rest
.github/workflows/: build.yml
lilp-01-rcli/: Cargo.toml
lilp-01-rcli/fixtures/: crypt-key.txt  jwt-secret.txt  jwt-token.txt
lilp-01-rcli/src/: main.rs
lilp-01-rcli/src/cli/: jwt.rs  mod.rs  text.rs
lilp-01-rcli/src/process/: http_serve.rs  jwt.rs  mod.rs  text.rs
lilp-01-rcli/templates/: directory.html
lilp-02-concurrency/: README.md
lilp-02-concurrency/examples/: dredis.rs
lilp-02-simple-redis/: README.md
lilp-02-simple-redis/src/: main.rs  network.rs
lilp-02-simple-redis/src/backend/: mod.rs
lilp-02-simple-redis/src/cmd/: echo.rs  hmap.rs  map.rs  mod.rs  set.rs
lilp-02-simple-redis/src/resp/: array.rs  bulk_string.rs  frame.rs  integer.rs  mod.rs  set.rs  simple_string.rs
lilp-03_error_info/error-code/examples/: web.rs
lilp-03_macros/src/: lib.rs
lilp-04-ecosystem/: Cargo.toml  README.md
lilp-04-ecosystem/examples/: chat.rs  lilp_chat.rs  lilp_shortener.rs
lilp-04-ecosystem/src/: lib.rs
lilp-04-ecosystem/src/lilp/: db.rs  db_config.rs  error.rs  handler.rs  mod.rs
lilp-05-chat/: README.md
lilp-05-chat/chat_core/src/middlewares/: auth.rs
lilp-05-chat/chat_core/src/utils/: jwt.rs
lilp-06-crm/crm/src/: client.rs  lib.rs
lilp-06-crm/crm/src/abi/: mod.rs
tyr-02-simple-redis/: Cargo.toml
tyr-02-simple-redis/src/: main.rs
