[workspace]
members = ["lilp-01-rcli", "lilp-02-concurrency", "lilp-02-simple-redis", "lilp-03_error_info/error-code", "lilp-03_error_info/error-code-derive", "lilp-03_macros", "lilp-04-ecosystem"]

[package]
name = "rust-bootcamp"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = "fat"
strip = true

[workspace.dependencies]
anyhow = "1"
error-code = { path = "lilp-03_error_info/error-code" }
error-code-derive = { path = "lilp-03_error_info/error-code-derive" }
http = "1"
thiserror = "1"

[dependencies]
anyhow = { workspace = true }
