[workspace]
members = ["lilp-01-rcli", "lilp-02-concurrency", "lilp-02-simple-redis",
    "lilp-03_error_info/error-code", "lilp-03_error_info/error-code-derive", "lilp-03_macros",
    "lilp-04-ecosystem",
    "lilp-05-chat/chat_core", "lilp-05-chat/chat_server", "lilp-05-chat/chat_test", "lilp-05-chat/notify_server",
    "lilp-06-crm/crm", "lilp-06-crm/crm-metadata", "lilp-06-crm/crm-send","lilp-06-crm/user-stat",
]
resolver = "2"

[package]
name = "rust-bootcamp"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = "fat"
strip = true

[workspace.dependencies]
anyhow = "1"
error-code = { path = "lilp-03_error_info/error-code" }
error-code-derive = { path = "lilp-03_error_info/error-code-derive" }
http = "1"
thiserror = "1"

axum = { version = "0.7.5", features = [
    "http2",
    "query",
    "tracing",
    "multipart",
    # "macros",
] }

axum-extra = { version = "0.9.3", features = ["typed-header"] }
chrono = { version = "0.4.38", features = ["serde"] }
chat-core = { path = "lilp-05-chat/chat_core" }
chat-server = { path = "lilp-05-chat/chat_server" }
jwt-simple = "0.12.9"
notify-server = { path = "lilp-05-chat/notify_server" }
serde = { version = "1.0.198", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.7.4", features = [
    "chrono",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = [
    "compression-full",
    "fs",
    "trace",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

crm-metadata = { path = "lilp-06-crm/crm-metadata" }
crm-send = { path = "lilp-06-crm/crm-send" }
derive_builder = "0.20.0"
futures = "0.3.30"
itertools = "0.12.1"
prost = "0.12.4"
prost-build = "0.12.4"
prost-types = "0.12.4"
proto-builder-trait = "0.6.1"
rand = "0.8.5"
tokio-stream = "0.1.15"
tonic = { version = "0.11.0", features = ["zstd", "tls"] }
tonic-build = "0.11.0"
user-stat = { path = "lilp-06-crm/user-stat" }



[dependencies]
anyhow = { workspace = true }
